<resources>
    <string name="app_name">Noughts and crosses</string>
    <string name="un_jugador">1 player</string>
    <string name="dos_jugadores">2 players</string>
    <string name="facil">Easy</string>
    <string name="normal">Normal</string>
    <string name="imposible">Insane</string>
    <string name="casilla">Tile</string>
    <string name="ciculos_ganan">Circles win!</string>
    <string name="aspas_ganan">Crosses win!</string>
    <string name="empate">Tie!</string>
</resources>
